Fix game menu text wrapping during opening
Fixes #760.

--- a/src/gui/html/css/style.css
+++ b/src/gui/html/css/style.css
@@ -74,6 +74,9 @@ tt, code, kbd, samp {
   margin: 0 8px;
   width: 250px;
 }
+#gameMenu > paper-item {
+  white-space: nowrap;
+}
 #applySortButton {
     color: var(--dark-accent-color);
     background-color: white;
